# IRIS-hackanova-26

./: .env.example  .gitignore  IRIS_CLEAN.html  IRIS_UI.html  README.md  RUN_LOCAL.txt  UI_README.md  UNUSED_BACKEND_COMPONENTS.md  cache_data.py  docker-compose.yml  index.html  iris.db  package-lock.json  package.json  pyproject.toml  requirements.txt  test_backtest.py
.vite/deps_temp_7ebb926b/: _metadata.json
app/: config.py  db.py  main.py  models.py
app/agents/: __init__.py  automator.py  comparator.py  manager.py  trader_strategy.py  verifier.py
app/algorithms/: __init__.py
app/api/: __init__.py  auth.py  automator.py  backtest.py  market.py  strategy.py  tearsheet.py  websocket.py
app/data/: __init__.py  cache.py  loader.py
app/engine/: __init__.py  event.py  friction.py  portfolio.py  runner.py
app/nlp/: __init__.py  parser.py  schema.py
app/signals/: __init__.py  moving_averages.py  oscillators.py  volatility.py  volume.py
app/tearsheet/: __init__.py  builder.py  (+2 more)
deployments/: 55C55E0D.json  EDF9B988.json
docs/: DETAILED_STRUCTURE.md  STRUCTURE.md  UI_BLUEPRINT.md  how Iris works.txt
frontend/: index.html  package-lock.json  package.json
iris-client/: .env.local  .env.local.example  DEVELOPMENT.md  INSTALL.md  README.md  RUN_WITH_BACKEND.md  build_error.txt  eslint.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
scripts/: benchmark.py  run_example.py  seed_cache.py
src/: App.tsx  main.tsx
tests/: __init__.py  conftest.py  test_integrity.py  test_persistence.py
tmp/: test_complex_strategies.py
(+230 files in other folders)
